Bug 157817 - PAC gives "Invalid use of a "P" structure element" with title of multi page TOC
Summary: PAC gives "Invalid use of a "P" structure element" with title of multi page TOC
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:24.2.0 target:7.6.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks: PDF-Accessibility
  Show dependency treegraph
 
Reported: 2023-10-18 20:39 UTC by Gabor Kelemen (Collabora)
Modified: 2023-10-25 09:17 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Writer (30.54 KB, application/vnd.oasis.opendocument.text)
2023-10-18 20:39 UTC, Gabor Kelemen (Collabora)
Details
Screenshot of the PAC error message and the example file in Writer (100.24 KB, image/png)
2023-10-18 20:39 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-10-18 20:39:20 UTC
Created attachment 190283 [details]
Example file from Writer

Attached example document has a simple TOC that spans two pages.

When exported as a PDF/UA document the PAC tool gives the Logical Structure - Structure Tree - "P" structure elements - Invalid use of a "P" structure element
error message. Not if all of the TOC is displayed on the same page.

1. Open attached file
2. Save as PDF, make sure to check the PDF/UA option
3. Open it in the PAC 2021 tool
-> error message

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e9374f74385d7dfe77d1902d3d82af20143bc775
CPU threads: 15; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: threaded

Seems to have started with

https://git.libreoffice.org/core/+/033e37b49b5712df19dbfd2c307a102bce620de1

author	Michael Stahl <michael.stahl@allotropia.de>	Thu Aug 31 19:50:55 2023 +0200
committer	Caolán McNamara <caolan.mcnamara@collabora.com>	Tue Sep 26 21:13:18 2023 +0200
tree 1abc64b331189c3cadb29faa1c930f731a47d569
parent 8c94442fab9588dd0793a1792979f50a600c4c65 [diff]

sw: PDF/UA export: produce nested Sect SEs for nested sections
Comment 1 Gabor Kelemen (Collabora) 2023-10-18 20:39:51 UTC
Created attachment 190284 [details]
Screenshot of the PAC error message and the example file in Writer
Comment 2 Commit Notification 2023-10-24 12:25:54 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a5851d0a6fdc3e08e93daf8cf0ae7f6fc2d73ef6

tdf#157817 sw: PDF/UA export: fix ToX header sections

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Michael Stahl 2023-10-24 12:27:06 UTC
fixed on master
Comment 4 Commit Notification 2023-10-25 09:17:58 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/eeba703a36aa1e1adcd8dc8b6f87e267ee38aae7

tdf#157817 sw: PDF/UA export: fix ToX header sections

It will be available in 7.6.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.